# pFUnit_demos

./: .gitignore  CONTRIBUTING.md  ChangeLog.md  README.md
Basic/: .gitignore  CMakeLists.txt  Makefile  build_with_cmake_and_run.x  build_with_make_and_run.x
Basic/src/: CMakeLists.txt  Makefile  broken_sut.F90  throw.F90  working_sut.F90
Basic/tests/: .gitignore  CMakeLists.txt  Makefile  simple_assertions.pf  test_disable.pf  test_error_handling.pf  test_failing.pf  test_pseudo_fixture.pf  test_simple.pf  test_simple_fixture.pf  throw_with_pfunit.F90
MPI/: CMakeLists.txt  Makefile  build_and_run.x  build_with_cmake_and_run.x  build_with_make_and_run.x
MPI/src/: CMakeLists.txt  Makefile  halo.F90
MPI/tests/: .gitignore  CMakeLists.txt  Makefile  test_halo.pf
Parameterized/: CMakeLists.txt  README.md  build_with_make_and_run.x
Parameterized/src/: CMakeLists.txt  Makefile  Trig.F90
Parameterized/tests/: CMakeLists.txt  Makefile  test_trig.pf
Trivial/: .gitignore  CMakeLists.txt  Makefile  build_and_run.x  build_with_cmake_and_run.x  build_with_make_and_run.x  square.F90  test_square.pf
